src/objects/zqu__QuoteProductOption__c.object
<CustomObject>
    <fields>
        <fullName>zqu__ChildProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product that the Quote Product Option includes as part of the bundle or product group.</description>
        <inlineHelpText>The Product that the Quote Product Option includes as part of the bundle or product group.</inlineHelpText>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.
Note:
* A Bundle typed Product cannot set to Child Product field</errorMessage>
            <filterItems>
                <field>Product2.zqu__Type__c</field>
                <operation>notEqual</operation>
                <value>Bundle</value>
            </filterItems>
            <filterItems>
                <field>Product2.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Product Options (Product)</relationshipLabel>
        <relationshipName>Quote_Product_Options1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__OptionType__c</fullName>
        <description>The type of the Quote Product Option.</description>
        <inlineHelpText>The type of the Quote Product Option.</inlineHelpText>
        <label>Option Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Recommended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product which contains this Quote Product Option.</description>
        <inlineHelpText>The product which contains this Quote Product Option.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Product Options</relationshipLabel>
        <relationshipName>Quote_Product_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the original Product Option in the Product Catalog.</description>
        <inlineHelpText>A lookup to the original Product Option in the Product Catalog.</inlineHelpText>
        <label>Product Option</label>
        <referenceTo>zqu__ProductOption__c</referenceTo>
        <relationshipLabel>Quote Product Options</relationshipLabel>
        <relationshipName>Quote_Product_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteProductOptionGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Product Option Group which contains this Quote Product Option.</description>
        <inlineHelpText>The Quote Product Option Group which contains this Quote Product Option.</inlineHelpText>
        <label>Quote Product Option Group</label>
        <referenceTo>zqu__QuoteProductOptionGroup__c</referenceTo>
        <relationshipLabel>Quote Product Options</relationshipLabel>
        <relationshipName>Quote_Product_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Quote__c</fullName>
        <description>The quote that contains this Quote Product Option.</description>
        <inlineHelpText>The quote that contains this Quote Product Option.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Product Options</relationshipLabel>
        <relationshipName>Quote_Product_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__RootProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the root product in the bundle.</description>
        <inlineHelpText>A reference to the root product in the bundle.</inlineHelpText>
        <label>Root Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Product Options (Root Product)</relationshipLabel>
        <relationshipName>Quote_Product_Options2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RootQrpId__c</fullName>
        <description>The Id of the top level Quote Rate Plan in the bundle.</description>
        <inlineHelpText>The Id of the top level Quote Rate Plan in the bundle.</inlineHelpText>
        <label>Root Quote Rate Plan Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Quote Product Option</label>
    <nameField>
        <label>Quote Product Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Product Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>zqu__Child_Product_Cannot_Be_Bundle</fullName>
        <active>true</active>
        <description>Child Product type cannot be Bundle</description>
        <errorConditionFormula>ISPICKVAL(zqu__ChildProduct__r.zqu__Type__c,&apos;Bundle&apos;)</errorConditionFormula>
        <errorDisplayField>zqu__ChildProduct__c</errorDisplayField>
        <errorMessage>Child Product type cannot be Bundle</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Child_Product_Not_Blank</fullName>
        <active>true</active>
        <description>Child Product cannot be null</description>
        <errorConditionFormula>ISBLANK( zqu__ChildProduct__c )</errorConditionFormula>
        <errorDisplayField>zqu__ChildProduct__c</errorDisplayField>
        <errorMessage>Child Product cannot be null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Parent_Not_Same_As_Child</fullName>
        <active>true</active>
        <description>The parent product cannot be the same as the child product.</description>
        <errorConditionFormula>zqu__ChildProduct__c  =  zqu__ParentProduct__c &amp;&amp; NOT(ISBLANK( zqu__ChildProduct__c )) &amp;&amp; NOT(ISBLANK(  zqu__ParentProduct__c  ))</errorConditionFormula>
        <errorMessage>The parent product cannot be the same as the child product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Should_have_one_parent</fullName>
        <active>true</active>
        <description>A Product Option should belong to either a Parent Product or a Product Option Group</description>
        <errorConditionFormula>AND( 
  ISBLANK( zqu__ParentProduct__c ),
  ISBLANK( zqu__QuoteProductOptionGroup__c ) 
)</errorConditionFormula>
        <errorMessage>A Product Option should belong to either a Parent Product or a Product Option Group</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Standalone_Prod_Cannot_Have_Included_PO</fullName>
        <active>true</active>
        <description>A Standalone typed Product cannot have an &quot;IncludedTyped&quot; Product Option</description>
        <errorConditionFormula>ISPICKVAL( zqu__ParentProduct__r.zqu__Type__c ,&apos;Standalone&apos;) &amp;&amp;  ISPICKVAL( zqu__OptionType__c , &apos;Included&apos;)</errorConditionFormula>
        <errorMessage>A Standalone typed Product cannot have an &quot;IncludedTyped&quot; Product Option</errorMessage>
    </validationRules>
</CustomObject>